altered layout at breakpoint: sm

--- a/index.html
+++ b/index.html
@@ -341,15 +341,15 @@
         <h2>Resume</h2>
         <p>My Career Prospects</p>
       </div>
-      <div>
-        <span class="h5 p-2 text-dark fst-normal align-middle mx-4" style="background-color:#18d26e; border-radius: 5px;">Blockchain | Web Developer</span>
+      <div class="d-flex flex-wrap">
+        <span class="h5 p-2 text-dark fst-normal align-middle ms-4" style="background-color:#18d26e; border-radius: 5px;">Blockchain | Web Developer</span>
         <a href="https://github.com/EdwinRoosevelt">
-          <button class="btn btn-light p-0 mx-1" style="border-radius: 25px;" data-toggle="tooltip" title="Github profile">
+          <button class="btn btn-light p-0 ms-4" style="border-radius: 25px;" data-toggle="tooltip" title="Github profile">
             <i class="ri-github-fill px-2" style="font-size: 28px;" ></i>
           </button>
         </a>
         <a href="https://drive.google.com/file/d/16-wF0ZcR2HrhExLNNW60E8Gx9_D2yMPS/view?usp=sharing">
-          <button class="btn btn-light p-0 mx-1" style="border-radius: 25px;" data-toggle="tooltip" title="Resume link">
+          <button class="btn btn-light p-0 ms-2" style="border-radius: 25px;" data-toggle="tooltip" title="Resume link">
             <i class="ri-profile-fill px-2" style="font-size: 28px; color: #2964cf;" ></i>
           </button>
         </a>
