feat: changes in about section

--- a/index.html
+++ b/index.html
@@ -91,13 +91,11 @@
         <div class="col-lg-8 pt-4 mt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>A Curious Lad</h3>
           <p class="fst-italic">
-            This world is a curious place. Knowledge is the appetite for our curiosity. Grab a cup of coffee and we can talk about anything.
-            From Quantum realm to the vast and mysterious universe, Brief history of us and the tomorrow, Trending technologies like Big Data, AI, Quantum Computing,
-            The meaning of life, and much more.
+            The world we inhabit is an intriguing realm, constantly inspiring our inquisitive nature. Knowledge acts as the catalyst for our curiosity. So, why not join me for a cup of coffee, and together we can delve into a myriad of subjects? We can traverse the captivating realms, from the intricacies of the quantum world to the enigmatic expanses of the universe. We can explore the tapestry of our past, the unfolding of tomorrow, and the emergence of trending technologies like Big Data, AI, and Quantum Computing. Moreover, we can even venture into profound inquiries such as the meaning of life. In this vast and unknown ocean of possibilities, what we have uncovered thus far merely represents a mere droplet of understanding.
           </p>
-          <p>
+          <!-- <p>
             What we know is a drop of water in this vast & unknown ocean.
-          </p>
+          </p> -->
 
           <!-- <div class="section-title pt-4">
             <h2>More about me</h2>
