feat: bitbash project

--- a/index.html
+++ b/index.html
@@ -569,6 +569,16 @@
         <p>My Works</p>
       </div>
 
+
+      
+      <div class="row">
+          <div class="icon-box container p-2">
+            <a href="https://bitbash.in" target="_blank">
+            <img class="img-fluid" src="./assets/img/projects/bitbash-banner.png" />
+            </a>
+          </div>
+      </div>
+
       <div class="row">
           <div class="icon-box container p-2">
             <a href="https://timetabler.in" target="_blank">
